# argos3-epuck-danesh

scripts/: upload.py
src/: CMakeLists.txt
src/demos/: CMakeLists.txt  epuck_swarm.argos
src/demos/behaviors/: aggregatebehavior.cpp  behavior.h  omega_algorithm.cpp  omega_algorithm.h
src/demos/epuck_swarm/: epuck_swarm.cpp  epuck_swarm.h
src/faultdetection/: CMakeLists.txt  epuck_hom_swarm.argos
src/faultdetection/behaviors/: aggregatebehavior.cpp  dispersebehavior.cpp  flockingbehavior.cpp  flockingbehavior.h
src/faultdetection/epuck_hom_swarm/: epuck_hom_swarm.cpp  epuck_hom_swarm.h
src/faultdetection/fault_detection_model/: sensingandcommunication.cpp
src/faultdetection/feature_vector/: bayesianinferencefeaturevector.cpp  bayesianinferencefeaturevector.h  propriofeaturevector.cpp
src/plugins/robots/e-puck/: RealLibrary.cmake
src/plugins/robots/e-puck/control_interface/: ci_epuck_pseudo_range_and_bearing_sensor.cpp  ci_epuck_pseudo_range_and_bearing_sensor.h
src/plugins/robots/e-puck/real_robot/: real_epuck.cpp  real_epuck.h  real_epuck_debugmessages.h  real_epuck_main.cpp  real_epuck_pseudo_range_and_bearing_sensor.cpp  real_epuck_pseudo_range_and_bearing_sensor.h
src/testing/: test_controller.argos  test_controller.cpp  test_controller.h
